# SemEval2026-EmoVA

./: .gitignore  README.md  SEMEVAL2026_EMOVA_ABLATION.ipynb  SEMEVAL2026_EMOVA_ABLATION_2a.ipynb  SEMEVAL2026_EMOVA_SUBMISSION.ipynb  eda.ipynb  main.ipynb  pyproject.toml  requirements.txt  transformer_tutorial.ipynb
src/: bilstm.py  dataproprecess.ipynb  dataset.py  dataset_utils.py  lstm.ipynb  preprocessing_task1.ipynb  preprocessing_task2a.ipynb  preprocessing_task2b.ipynb  transformer_wrapper.py  utils.py
src/data/: __init__.py  colate_2a.py  collate.py  collate_2a.py  collate_modified.py  dataset.py  dataset_2a.py  dataset_modified.py  ecological_dataset.py  preprocessing_task2a.ipynb  utils.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  affect_model.py  affect_model_2a  affect_model_2a.py  bilstm.py  encoder.py  heads.py  lstm.py  pooling.py  set_attention.py  tokenizer_wrapper.py
src/training/: __init__,py  __init__.py  losses.py  trainer.py  trainer_2a  trainer_2a.py  utils.py
statistics/: train_subtask1_group_by_users_len_sorted_asc.csv
