[project]
name = "semeval2026-emova"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.18",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.3.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "torch>=2.9.1",
    "tornado==6.5.3",
    "traitlets==5.14.3",
    "transformers>=4.57.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "wcwidth==0.2.14",
]
